--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.2.0",
@@ -24,8 +25,10 @@
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "uuid": "^3.3.3",
     "validator": "^12.0.0",
     "webpack": "^4.41.2",
     "webpack-dev-server": "^3.9.0"
