--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.2.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "react": "^16.11.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^21.3.2",
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.1",
