--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-test-renderer": "^16.11.0",
     "redux": "^4.0.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
